--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,14 @@
 	font-family: 'Muli', sans-serif;
 
 }
+a {
+	color: #fff;
+	text-decoration: none;
+}
+a:hover, a:focus, a:active {
+	text-decoration: none;
+	color: #eee;
+}
 .container-gradient {
 	background: orange;
 	background: linear-gradient(to right, #fec329, #eb8835);
