--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,8 @@ a:hover, a:focus, a:active {
 	background-position: center;
 	background-size: cover;
 	width: 100%;
-	height: 100vh;
+	height: 90vh;
+	/*height: auto;*/
 	color: #fff;
 }
 .no-margin {
@@ -125,7 +126,7 @@ padding-left: 10px;
     right: 50px;
     bottom: -450px;
 	
-	}   
+}   
 
 
 
