--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,7 @@
 @media only screen and (max-device-width: 600px) and (min-device-width: 320px) {
+	.container {
+		padding: 0 
+	}
 
 	.flex-con {
 	    display: flex;
@@ -27,7 +30,7 @@
 		background-position: center;
 		background-size: cover;
 		width: 100%;
-		height: 100vh;
+		height: 100%;
 		color: #fff;
 	}
 	.story-today {
@@ -35,13 +38,21 @@
 	    padding-left: 20px;
 	    padding-top: 10px;
 	}
+	.story-today__headline {
+		font-size: 30px;
+		padding-bottom: 30px;
+		padding-top: 30px;
+	}
 	.pull-r {
 		right: -15px;
-		top: -420px;
+		top: -360px;
 	}
 	.fix-bottom {
 		position: absolute;
-	    right: 30px;
-	    bottom: -120px;
+	    right: 5px;
+	    bottom: -30px;
 	}   
+	.col-md-6 {
+		margin-bottom: 20px;
+	}
 }
