--- a/css/main.css
+++ b/css/main.css
@@ -1,143 +1,361 @@
 
 
-/* ==========================================================================
-   Custom styles
-   ========================================================================== */
-
 *, body {
-	margin: 0
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Muli', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Muli', sans-serif;
 
 }
 a {
-	color: #fff;
-	text-decoration: none;
+    color: #fff;
+    text-decoration: none;
 }
 a:hover, a:focus, a:active {
-	text-decoration: none;
-	color: #eee;
+    text-decoration: none;
+    color: #eee;
 }
 .container-gradient {
-	background: orange;
-	background: linear-gradient(to right, #fec329, #eb8835);
-	background: -webkit-linear-gradient(to right, #fec329, #eb8835);
-	background: -moz-linear-gradient(to right, #fec329, #eb8835);
-	background: -o-linear-gradient(o right, #fec329, #eb8835);
-	
+    background: orange;
+    background: linear-gradient(to right, #fec329, #eb8835);
+    background: -webkit-linear-gradient(to right, #fec329, #eb8835);
+    background: -moz-linear-gradient(to right, #fec329, #eb8835);
+    background: -o-linear-gradient(o right, #fec329, #eb8835);
+    
 }
 .logo-wrap {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 .logo {
-	width: 100px;
-	height: auto;
+    width: 100px;
+    height: auto;
 }
 .ea-logo {
-	width: 300px;
-	height: auto;
+    width: 300px;
+    height: auto;
 }
 .logo-wrap__ea {
-	padding-top: 30px;
-	padding-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 .flex-con {
-	display: flex;
-	justify-content: space-between;
-	color: #fff;
-	padding: 30px 50px;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    padding: 5px 50px;
 }
 .flex-center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
-	flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+}
+.nav-head {
+    background-color: #2b57a0;
+    border-radius: 0;
+}
+.nav-social h5 {
+    color: white;
+}
+.flex-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
 }
 .nav-right {
-	display: flex;
+    display: flex;
 } 
 .nav-right img {
-	width: 200px;
-	height: auto;
+    width: 200px;
+    height: auto;
 }
 .navbar-brand {
-	padding: 0;
+    padding: 0;
 }
 
 .main-section {
-	padding: 15px;
-	background-image: url(../img/banners/header.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-	width: 100%;
-	height: 90vh;
-	/*height: auto;*/
-	color: #fff;
+    padding: 15px;
+    background-image: url(../img/banners/header.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 90vh;
+    /*height: auto;*/
+    color: #fff;
 }
 .no-margin {
-	margin-bottom: 0!important;
-	margin-right: 0!important;
-	margin-left: 0!important;
-	margin-top: 0!important;
-	border: 0px;
+    margin-bottom: 0!important;
+    margin-right: 0!important;
+    margin-left: 0!important;
+    margin-top: 0!important;
+    border: 0px;
 }
 .story-today {
-	color: #fff;
-	padding-left: 60px;
+    color: #fff;
+    padding-right: 30px;
 }
 .no-bd {
-	border-radius: 0;
-	background-image: none;
+    border-radius: 0;
+    background-image: none;
 }
 .story-today__headline {
-	padding-top: 50px;
-	padding-bottom: 50px; 
-	font-size: 40px;
-	font-weight: 900;
+    padding-top: 50px;
+    padding-bottom: 50px; 
+    font-size: 40px;
+    font-weight: 900;
 }
 .story-today__headline a {
-	text-decoration: none;
-	color: white;
+    text-decoration: none;
+    color: white;
 }
 .btn-wrap .btn {
-	text-transform: capitalize;
-	padding: 10px 30px;
-	background: #325194;
+    text-transform: capitalize;
+    padding: 10px 30px;
+    background: #325194;
 }
 .btn-wrap .btn:hover {
-	/*padding: 11px 30px;*/
-	transform: scale(1.01);
-	transition: all 0.3s;
+    /*padding: 11px 30px;*/
+    transform: scale(1.01);
+    transition: all 0.3s;
 }
 .pb {
-	padding-bottom: 10px;
+    padding-bottom: 10px;
 }
 .fa-angle-right {
 padding-left: 10px; 
 }
 .social-handles--icon {
-	padding-left: 5px;
-	padding-right: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .social-handles--icon a {
-	color: #fff;
+    color: #fff;
 }
 .pull-r {
-	position: absolute;
-	right: -100px;
-	top: 10px;
+    position: absolute;
+    right: -100px;
+    top: 10px;
 }
 .fix-bottom {
-	position: absolute;
+    position: absolute;
     right: 50px;
     bottom: -450px;
 }   
+.menu {
+    float: right;
+    padding-top: 45px; 
+}
+.menu li {
+    font-size: 24px;
+    padding: 5px 5px -10px;
+}
+.menu li a:hover {
+    background-color: #2b5fa0;
+    color: orange;
+    
+}
+.menu button {
+    margin: 5px 20px;
+    border-radius: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 16px;
+    font-weight: 900;
+    background: orange;
+    background: linear-gradient(to right, #fec329, #eb8835);
+    background: -webkit-linear-gradient(to right, #fec329, #eb8835);
+    background: -moz-linear-gradient(to right, #fec329, #eb8835);
+    background: -o-linear-gradient(o right, #fec329, #eb8835);
+}
+.navbar {
+    margin-bottom: 0; 
+}
+.icon-bar {
+    color: white;
+    background-color: white;
+}
+.banner-left {
+    padding: 20px 60px 20px 20px; 
+}
+.banner-left h1  {
+    font-size: 72px;
+}
+.banner-right {
+    text-align: right;
+    padding-right: 20px 20px 60px 20px; 
+}
+.about {
+    color: #6f6f6f;
+    padding-bottom: 30px;
+}
+.about-head {
+    text-align: center;
+    font-weight: 900;
+}
+.about-head h3, .about-head h5 {
+    font-weight: 700;
+}
+.about-left {
+    display: flex;
+    flex-direction: row;
+}
+.about__title {
+    /*display: flex;*/
+    flex-direction: column;
+    text-align: right;
+    flex-grow: 1;
+}
+.about__title h1 {
+    opacity: 0.5;
+}
+.about__desc {
+    padding: 20px 50px;
+    flex-grow: 3;
+}
+.about__desc p {
+    font-size: 18px;
+    line-height: 1.3;
+}
+.about-right {
+    text-align: right;
+}
+.about__featured--title {
+    padding: 0 50px;
+}
+.about__featured--title h1 {
+    font-weight: bold;
+    line-height: 1.5;
+    color: #325194;
+    font-size: 40px;
+}
+.about__featured--title p {
+    padding-left: 90px;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.vision {
+    background-color: #f5f5f5;
+    padding-bottom: 50px;
+}
+.about__vision {
+    padding: 30px 100px;
+    text-align: center;
+}
+.about__vision p {
+    font-size: 18px;
+}
+.about__vision h3 {
+    color: #325194;
+    font-weight: bold;
+    text-shadow: none;
+    text-align: center;
+    padding-top: 20px;
+}
+.about__vision--body {
+    width: 80%;
+    margin: 0 auto;
+}
+.initiative {
+    box-sizing: border-box;
+}
+.initiative h3 {
+    text-align: center;
+    font-size: 32px;
+}
+.grid {
+    display: flex;
+    width: 100%;
+    overflow-x: auto;
+    padding: 20px 50px; 
+}
+.grid__card {
+    width: 300px;
+    height: 300px;
+    padding: 10px 20px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    border-radius: 7px;
+    margin: 5px 10px;
+}
+.grid__body {
+    padding-top: 30px;
+}
 
+.grid__card--green {
+    background-color: #3EC8AC;
+    color: #fff;
+}
+.grid__card--lilac {
+    background-color: #B346FF;
+    color: #fff;
+}
+.grid__card--red {
+    background-color: #F46188;
+    color: #fff;
+}
+.grid__card--yellow {
+    background-color: #DFEB95;
+    color: #fff;
+}
+.grid__card--blue {
+    background-color: #6151BB;
+    color: #fff;
+}
+.grid__text h4 {
+    line-height: 1.2;
+}
+footer {
+    background-color: #1A2639;
+    padding: 10px 0 2px;
+    color:  gray;
+    display: flex;
+    justify-content: center;
+}
+.m-0 {
+    margin: 0;
+}
+.people {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background: #f5f5f5; 
+}
 
-
-
-
+.people h3 {
+    text-align: center;
+    color: #2b5fa0;
+    font-weight: 700;
+}
+.profile-card {
+    margin: 20px 40px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    padding: 0 0 20px;
+    border-radius: 3px;
+}
+.profile__img img {
+    width: 300px;
+    height: auto;
+}
+.profile__details {
+    text-align: center;
+}
+.heading {
+    font-size: 28px;
+    text-align: center;
+}
+.team p {
+    padding-left: 65px;
+    font-size: 18px;
+    margin-bottom: 0;
+}
+.partners {
+    padding: 20px 50px;
+}
+.img-wrap {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
