--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,16 @@ a:hover, a:focus, a:active {
     text-decoration: none;
     color: #eee;
 }
+a:hover {
+    cursor: pointer;
+}
+.menu li a:active, .menu li a:active .menu li a:focus {
+    background: #2b5fa0;
+}
+.nav>li>a:hover, .nav>li>a:focus {
+    text-decoration: none;
+    background: #2b5fa0;
+}
 .container-gradient {
     background: orange;
     background: linear-gradient(to right, #fec329, #eb8835);
@@ -35,8 +45,8 @@ a:hover, a:focus, a:active {
     height: auto;
 }
 .logo-wrap__ea {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 5px;
+    padding-bottom: 0px;
 }
 .flex-con {
     display: flex;
@@ -82,7 +92,18 @@ a:hover, a:focus, a:active {
     background-position: center;
     background-size: cover;
     width: 100%;
-    height: 90vh;
+    height: 60vh;
+    /*height: auto;*/
+    color: #fff;
+}
+.main-section--landing {
+    padding: 15px;
+    background-image: url(../img/banners/header.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
     /*height: auto;*/
     color: #fff;
 }
@@ -96,6 +117,9 @@ a:hover, a:focus, a:active {
 .story-today {
     color: #fff;
     padding-right: 30px;
+}
+.story-today--landing {
+    padding-top: 45px;
 }
 .no-bd {
     border-radius: 0;
@@ -135,10 +159,10 @@ padding-left: 10px;
 .social-handles--icon a {
     color: #fff;
 }
-.pull-r {
+.landing-btn {
     position: absolute;
-    right: -100px;
-    top: 10px;
+    right: 0;
+    margin-top: 50px
 }
 .fix-bottom {
     position: absolute;
@@ -147,10 +171,10 @@ padding-left: 10px;
 }   
 .menu {
     float: right;
-    padding-top: 45px; 
+    padding-top: 15px; 
 }
 .menu li {
-    font-size: 24px;
+    font-size: 16px;
     padding: 5px 5px -10px;
 }
 .menu li a:hover {
@@ -163,7 +187,7 @@ padding-left: 10px;
     border-radius: 50px;
     padding-left: 40px;
     padding-right: 40px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 900;
     background: orange;
     background: linear-gradient(to right, #fec329, #eb8835);
@@ -321,6 +345,8 @@ footer {
 .people {
     margin-top: 30px;
     margin-bottom: 30px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     background: #f5f5f5; 
 }
 
@@ -335,6 +361,8 @@ footer {
     -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
     padding: 0 0 20px;
     border-radius: 3px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 .profile__img {
     /*width: 300px;*/
@@ -353,7 +381,7 @@ footer {
     text-align: center;
 }
 .team p {
-    padding-left: 65px;
+    padding-left: 125px;
     font-size: 18px;
     margin-bottom: 0;
 }
@@ -368,6 +396,102 @@ footer {
 .img-wrap img {
     width: 100%;
 }
-w-100 {
-    width: 100%;
+.flex-wrap--around {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    /*flex-direction: column;*/
+}
+.nav-social h5 {
+    font-weight: bold;
+} 
+.partner {
+    margin: 30px;
+}
+.partner .heading {
+    margin-top: 40px;
+    padding-bottom: 40px; 
+}
+.flex-logo {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-top: 15px;
+    padding-bottom: 15px; 
+}
+.logo--partner {
+    width: auto;
+}
+.logo--round {
+    border-radius: 50%;
+    border: 3px solid #eee;
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.partner-info {
+    /*display: none;*/
+}
+.partner-info-head {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.partner-info-head h2 {
+    padding-top: 60px;
+    color: grey;
+}
+.desc {
+    padding: 20px 40px;
+    font-size: 16px;
+}
+/*.hidden {
+    display: none;
+}*/
+.active {
+    display: block;
+}
+/*.float-btn {
+    position: absolute;
+    cursor: pointer;
+    bottom: 0;
+    left: 45%;
+}
+
+.bounce {
+    animation: bounce 2s infinite;
+}*/
+
+/*@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
+}*/
+.nav-dropdown {
+    display: none;
+    list-style: none;
+    padding-left: 17px;
+    padding-right: 15px;
+    padding-bottom: 10px;
+    position: absolute;
+    z-index: 1;
+    margin-top: -10px;
+    background: #2b57a0;
+    border-radius: 4px;
+}
+.nav-dropdown li a {
+    font-size: 0.8em;
+}
+.mobile-nav {
+    display: none!important;
 }
