--- a/css/responsive.css
+++ b/css/responsive.css
@@ -35,7 +35,7 @@
 		background-position: center;
 		background-size: cover;
 		width: 100%;
-		height: 100%;
+		height: 30vh;
 		color: #fff;
 	}
 	.story-today {
@@ -58,12 +58,14 @@
 	.fix-bottom {
 		position: absolute;
 	    right: 5px;
-	    bottom: -30px;
+	    bottom: -150px;
 	}   
 	.col-md-6 {
 		margin-bottom: 20px;
 	}
-
+	.banner-left {
+	    padding: 10px 60px 0px 20px;
+	}
 	.nav-social {
 		display: none;
 	}
@@ -110,6 +112,13 @@
 		padding: 2px;
 		overflow-y: hidden;
 	}
+	.col-md-3 {
+	    position: relative;
+	    min-height: 1px;
+	    padding-right: 15px;
+	    padding-left: 15px;
+	    width: 100%;
+	}
 	.about__vision h3 {
 		padding-bottom: 10px;
 	}
@@ -123,9 +132,43 @@
 	    padding: 20px;
 	}
 	.flex-wrap {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
+	    display: flex;
+	    justify-content: center;
+	    align-items: center;
+	    align-content: center;
+	    flex-direction: column;
+	}
+	.flex-wrap--around {
+	    display: flex;
+	    justify-content: space-around;
+	    align-items: center;
+	    align-content: center;
+	    flex-direction: column;
+	}
+	.navbar-header .flex-wrap {
+	    display: flex;
+	    justify-content: center;
+	    align-items: flex-start;
+	    align-content: center;
+	    flex-direction: column;
+	}
+	.landing-btn {
+		position: absolute;
+		right: 0;
+	}
+	.story-today--landing {
+		margin-top: 100px;
+	}
+	.nav-dropdown {
+		display: none;
+	}
+	 .arrow-down {
+		display: none;
+	}
+	.desktop-nav {
+		display: none!important;
+	}
+	.mobile-nav {
+		display: block!important
+	}
 }
