--- a/css/responsive.css
+++ b/css/responsive.css
@@ -123,7 +123,7 @@
 		padding-bottom: 10px;
 	}
 	.grid__card {
-		height: 250px;
+		height: 350px;
 	}
 	.profile-card {
 	    margin: 20px;
@@ -178,6 +178,9 @@
 		width: 50%;
 	}
 	.desc {
-    padding: 20px;
+    	padding: 20px;
+	}
+	.icon-wrap {
+	    padding-bottom: 10px;
 	}
 }
